--- a/trunk/reniec-parent/reniec-ear/pom.xml
+++ b/trunk/reniec-parent/reniec-ear/pom.xml
@@ -6,7 +6,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>ear</packaging>
   
-  <name>reniec-ear</name>
+  <name>Reniec EAR</name>
   <url>http://maven.apache.org</url>
   
   <dependencies>
@@ -19,20 +19,21 @@
   </dependencies>
   
   <build>
-		<finalName>Reniec</finalName>
+		<finalName>ReniecEAR</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-ear-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
+					<displayName>ReniecEAR</displayName>
 					<version>1.4</version>
 					<modules>
 						<webModule>
 							<groupId>pe.com.bbva</groupId>
 							<artifactId>reniec-web</artifactId>
-							<bundleFileName>reniec-web.war</bundleFileName>
-							<contextRoot>reniec-web</contextRoot>
+							<bundleFileName>Reniec.war</bundleFileName>
+							<contextRoot>Reniec</contextRoot>
 						</webModule>
 					</modules>
 				</configuration>
