--- a/trunk/reniec-parent/reniec-web/src/main/resources/reniec-messages.properties
+++ b/trunk/reniec-parent/reniec-web/src/main/resources/reniec-messages.properties
@@ -8,3 +8,10 @@ validar.elegir=Elegir {0}
 validar.nombre.archivo = El nombre {0} no es valido para la configuración solicitada.
 validar.existe.archivo = El archivo {0} no existe en la ruta configurada.
 validar.error.archivo = Error al leer el archivo {0}.
+
+#Login
+login.ldap.validacion=Ud. no está autorizado para acceder a este servicio
+login.ldap.error=Error de conexión con LDAP
+login.ldap.obtener.usuario=El usuario no cuenta con toda la información necesaria para completar su ingreso. Contáctese con el administrador del sistema. Usuario {0} - {1}
+
+ws.error=El tiempo de espera termino o la ruta del WebService no existe
