--- a/trunk/reniec-parent/reniec-web/src/main/resources/reniec.properties
+++ b/trunk/reniec-parent/reniec-web/src/main/resources/reniec.properties
@@ -1,2 +1,14 @@
-app.jdbc.jndi=java:comp/env/jdbc/APP_RENIEC
-#app.jdbc.jndi=jdbc/APP_RENIEC
+#app.jdbc.jndi=java:comp/env/jdbc/APP_RENIEC
+app.jdbc.jndi=jdbc/APP_RENIEC
+
+################ LDAP ################
+
+#1 valida en el servidor ldap, 0 no valida
+ldap.validator=0
+
+#Test/Calidad
+ldap.url=ldap://118.180.36.2:389/o=igrupobbva
+#Produccion
+#ldap.url=ldap://118.180.54.179:389/o=igrupobbva
+
+ldap.empleados=ou=empleados,o=igrupobbva
