--- a/trunk/reniec-parent/reniec-web/src/main/resources/reniec-messages.properties
+++ b/trunk/reniec-parent/reniec-web/src/main/resources/reniec-messages.properties
@@ -15,3 +15,9 @@ login.ldap.error=Error de conexión con LDAP
 login.ldap.obtener.usuario=El usuario no cuenta con toda la información necesaria para completar su ingreso. Contáctese con el administrador del sistema. Usuario {0} - {1}
 
 ws.error=El tiempo de espera termino o la ruta del WebService no existe
+
+#Membresia
+validar.existe.valor = El valor {0} ya se encuentra registrado
+
+#Opcion
+validar.dependencia.opcion = No se puede eliminar la opcion {0} ya que existen opciones que dependen de el
