--- a/reniec-parent/pom.xml
+++ b/reniec-parent/pom.xml
@@ -120,11 +120,6 @@
   		</exclusions>
   	</dependency>
   	<dependency>
-  		<groupId>log4j</groupId>
-  		<artifactId>log4j</artifactId>
-  		<version>1.2.14</version>
-  	</dependency>
-  	<dependency>
   		<groupId>org.quartz-scheduler</groupId>
   		<artifactId>quartz</artifactId>
   		<version>1.8.6</version>
@@ -155,11 +150,21 @@
 		<artifactId>commons-beanutils</artifactId>
 		<version>1.8.3</version>
 	</dependency>
-  	<dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-log4j12</artifactId>
-		<version>1.5.8</version>
-  	</dependency>
+	<dependency>
+		<groupId>org.apache.logging.log4j</groupId>
+		<artifactId>log4j-api</artifactId>
+		<version>2.0-beta9</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.logging.log4j</groupId>
+		<artifactId>log4j-core</artifactId>
+		<version>2.0-beta9</version>
+	</dependency>
+	<dependency>
+    	<groupId>org.apache.logging.log4j</groupId>
+    	<artifactId>log4j-slf4j-impl</artifactId>
+    	<version>2.0-beta9</version>
+	</dependency>
   </dependencies>
   <build>
   	<plugins>
