--- a/trunk/reniec-parent/reniec-web/pom.xml
+++ b/trunk/reniec-parent/reniec-web/pom.xml
@@ -103,8 +103,14 @@
 				<configuration>
 					<attachClasses>true</attachClasses>
 					<classesClassifier>classes</classesClassifier>
+					<!-- <webResources>
+	                    <resource>
+	                        <directory>${build.sourceDirectory}</directory>
+	                        <targetPath>WEB-INF/classes</targetPath>
+	                    </resource>
+	                </webResources> -->
 				</configuration>
 			</plugin>
-			</plugins>
+		</plugins>
 	</build>
 </project>
